--- a/app.json
+++ b/app.json
@@ -1,7 +1,18 @@
 {
+  "window": {
+    "navigationBarBackgroundColor": "#ffffff",
+    "navigationBarTextStyle": "black",
+    "navigationBarTitleText": "蚂蚁健身",
+    "backgroundColor": "#eeeeee",
+    "backgroundTextStyle": "dark"
+  },
+ 
   "pages": ["pages/main/main","pages/me/me","pages/wallet/wallet","pages/health_data/health_data","pages/charge_standard/charge_standard","pages/hotline/hotline","pages/exchange/exchange","pages/addinfo/addinfo"],
   "tabBar": {"borderStyle":"white","color":"#fff","selectedColor":"#fff","backgroundColor":"#E5E5E5",
-             "list":[{"iconPath":"images/main_pic.png","selectedIconPath":"images/main_pic.png","text":"首页",      "pagePath":"pages/main/main"},{"iconPath":"images/me_pic.png","selectedIconPath":"images/me_pic.png","text":"我的","pagePath":"pages/me/me"}]},
+             "list":[
+               {"iconPath":"images/main_pic.png","selectedIconPath":"images/main_pic.png","text":"首页","pagePath":"pages/main/main"},
+               {"iconPath":"images/qrcode.png","selectedIconPath": "images/qrcode.png","text": "","pagePath": "pages/main/main"},
+               {"iconPath":"images/me_pic.png","selectedIconPath":"images/me_pic.png","text":"我的","pagePath":"pages/me/me"}]},
     "networkTimeout": {
     "request": 10000,
     "connectSocket": 10000,
