微信支付搞掂
我擦嘞终于搞掂了

--- a/project.config.json
+++ b/project.config.json
@@ -4,6 +4,6 @@
 	"setting": {
 		"urlCheck": true
 	},
-	"appid": "wxfaa9d4937b7d9f50",
+	"appid": "wx576119495658127c",
 	"projectname": "nimisoft"
 }
